--- a/study/11a7/sinhhoc/01122021-sinh-hoc-a7-k18/main.css
+++ b/study/11a7/sinhhoc/01122021-sinh-hoc-a7-k18/main.css
@@ -30,7 +30,7 @@
 .table-wrapper  thead ,td {
   tetx-align:center;
   padding:1rem 2rem 1rem 2rem;
-  max-width: fit-content;
+  /*max-width: fit-content;*/
 }
 .text-blue{
     color: #54a0ff!important;
