--- a/study/11a7/sinhhoc/01122021-sinh-hoc-a7-k18/main.css
+++ b/study/11a7/sinhhoc/01122021-sinh-hoc-a7-k18/main.css
@@ -36,6 +36,7 @@
     color: #54a0ff!important;
 }
 @media screen and (max-width: 640px){
+  .content img{max-height:100px;}
   .table-wrapper:{position:relative; width:calc(100% + 40px);left:-20px;padding:0 20px; display:flex;overflow-x:scroll;overflow:scroll;}
   .table-wrapper:after{content:'';display:block;padding-left:20px}
   .table-wrapper  thead ,td {min-width:5rem;padding:3px;}
