--- a/demo/totinh-1402/main.css
+++ b/demo/totinh-1402/main.css
@@ -160,12 +160,12 @@ a
 
 .button__message::after
 {
-    content: "Có";
+    content: "Không";
 }
 
 .button__message:hover:after
 {
-    content: "Không";
+    content: "Đồng ý";
 }
 
 .col_third
